<resources>
    <string name="app_name">영상 메모</string>
    <string name="action_settings">보기 방식</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_album">Album</string>
    <string name="menu_url">URL</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">편집</string>
    <string name="title">제목</string>
    <string name="body">본문</string>
    <string name="date">2020년 02월 24일</string>
    <string name="image">사진</string>
    <string name="image_delete">삭제버튼</string>
    <string name="dialog_input_url">URL을 입력하세요.\nYouTube 또는 Instargram 링크를 입력하시면 사진을 가져옵니다.</string>
    <string name="dialog_input_youtube_url">YouTube URL을 입력하세요.</string>
    <string name="dialog_delete">정말로 삭제하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="stagger_grid_type">액자 형식</string>
    <string name="linear_type">목록 형식</string>
    <string name="grid_type">일반 형식</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
